--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --experimental-https",
-    "build": "next build --env-mode=loose",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
